--- a/newsplaylist.ipynb
+++ b/newsplaylist.ipynb
@@ -446,8 +446,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "38b05b09-a1db-4f7c-b08a-01b209d044d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'New': 4,\n",
+       "         'Apple': 2,\n",
+       "         'Pro': 2,\n",
+       "         'Online': 2,\n",
+       "         'Google’s': 2,\n",
+       "         'M4': 2,\n",
+       "         'Vision': 1,\n",
+       "         'Portland': 1,\n",
+       "         'DJ': 1,\n",
+       "         'Duty:': 1,\n",
+       "         'Black': 1,\n",
+       "         'Ops': 1,\n",
+       "         'Pass': 1,\n",
+       "         'subscriber': 1,\n",
+       "         'Microsoft': 1,\n",
+       "         'Nintendo': 1,\n",
+       "         'Switch': 1,\n",
+       "         'AI-powered': 1,\n",
+       "         'Pixels': 1,\n",
+       "         'Dead': 1,\n",
+       "         'Redemption': 1,\n",
+       "         'Remastered': 1,\n",
+       "         'CPU-bound': 1,\n",
+       "         'PC,': 1,\n",
+       "         'AMD': 1,\n",
+       "         'Ryzen': 1,\n",
+       "         'Android': 1,\n",
+       "         'Trojan': 1,\n",
+       "         'Ars': 1,\n",
+       "         'Technica': 1,\n",
+       "         'PlayStation': 1,\n",
+       "         'Live-Service': 1,\n",
+       "         'Strategy': 1,\n",
+       "         \"Concord's\": 1,\n",
+       "         'Failure': 1,\n",
+       "         'Matt': 1,\n",
+       "         'Mullenweg': 1,\n",
+       "         'Horror': 1,\n",
+       "         'Video': 1,\n",
+       "         'Games': 1,\n",
+       "         'Halloween': 1,\n",
+       "         'AI': 1,\n",
+       "         'InkSight': 1,\n",
+       "         \"Here's\": 1,\n",
+       "         'Full': 1,\n",
+       "         'Wizards': 1,\n",
+       "         'Deck': 1,\n",
+       "         'From': 1,\n",
+       "         'Magic:': 1,\n",
+       "         \"Gathering's\": 1,\n",
+       "         'Foundations': 1,\n",
+       "         \"Beginner's\": 1,\n",
+       "         'Box': 1,\n",
+       "         'OnePlus': 1,\n",
+       "         'Central': 1,\n",
+       "         'Entire': 1,\n",
+       "         'Mac': 1,\n",
+       "         'Lineup': 1,\n",
+       "         'Least': 1,\n",
+       "         'RAM,': 1,\n",
+       "         'Ending': 1,\n",
+       "         'Era': 1,\n",
+       "         'Death': 1,\n",
+       "         'Note': 1,\n",
+       "         'Series': 1,\n",
+       "         'Gets': 1,\n",
+       "         'Social': 1,\n",
+       "         'Deduction': 1,\n",
+       "         'Game': 1,\n",
+       "         'PS5,': 1,\n",
+       "         'PS4,': 1,\n",
+       "         'November': 1,\n",
+       "         'Anime': 1,\n",
+       "         'News': 1,\n",
+       "         'Network': 1,\n",
+       "         'Refreshes': 1,\n",
+       "         'MacBook': 1,\n",
+       "         'Laptops': 1,\n",
+       "         'Pro,': 1,\n",
+       "         'Max': 1,\n",
+       "         'Chips': 1,\n",
+       "         'Pokémon': 1,\n",
+       "         'TCG': 1,\n",
+       "         'Alexa': 1,\n",
+       "         'Skills': 1})"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_counter = collections.Counter(keywords)\n",
+    "word_counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "8a5a69d4-9b02-4602-80ea-04fc6952346a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credentials = \"spotify.json\"\n",
+    "with open(credentials, \"r\") as keys:\n",
+    "    api_tokens = json.load(keys)\n",
+    "\n",
+    "key_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "93428f95-0166-4866-832b-685a8dc668c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client_id = api_tokens[\"client_id\"]\n",
+    "client_secret = api_tokens[\"client_secret\"]\n",
+    "redirectURI = api_tokens[\"redirect\"]\n",
+    "username = api_tokens[\"username\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "9fed90fd-37e0-4f01-932e-fefe487bc588",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the URL you were redirected to:  https://www.google.co.uk/?code=AQBb7khqO89nhpS6adPONBfmEoMLrxYqsEwoXVCDjBJfXw-ZJ1GZFkm_agXU9T6dp94LrHHdVbSvLszRt5FowZ3cLPxXQPtKpKE5K0CpgQzOKBeR8f_XpjjTpwiBVxgBb24hQPDKONm6i5-F5JgCFspCNuAWUXj2MmUNL1PlgppqHojWImuvaqpsyNCVt7TnXoAO-GW3NcYv17XY4ZPXdBWNppEMUxTVZ2LFpd2e6YUmFrSkJ70iXdnEG-Wtd9PE4tbkosdRZtlaGOF97XNnaHUinL5PzlUIgd7PdOoLVKcqER3w8g4AbzVEs4sZTVVqow\n"
+     ]
+    }
+   ],
+   "source": [
+    "scope = 'user-read-private user-read-playback-state user-modify-playback-state playlist-modify-public user-library-read'\n",
+    "token = util.prompt_for_user_token(username, scope, client_id=client_id,\n",
+    "                           client_secret=client_secret,\n",
+    "                           redirect_uri=redirectURI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "b19f058c-03a8-4a91-8008-8842067e8b5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BQAy5JRI3N0L9pDn8XzUlj6q5dO3uRUbmrafcGUau6yDlTrUNyGzqletCbZ2VCwcyu5ZbV9kbT-n4EeQ8IS5KZiKeoYeZmn_FPxhGnMvt05A5DpMyD3QOld9_02VJbasZfjMHcjYg8TbtaUJdTOymDOOOfEC_nqFLuSnVw8C24S9rGIk_qNnPlBx-G8kXJMGhPYYnuZQiVUrs2skT7eLfIRLvsfH4JhEgJaIII_5uyaFEd1IxNYU4gtxUmRTAjBRXULG9efCsRZ4eg'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "731d82b9-46ec-4d82-9a50-dab768c886fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp = spotipy.Spotify(auth=token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "d88fe1f4-102f-4cbf-a58b-ae57de7aabf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['spotify:track:0IVkP59yJ9GFF6B7IrvrxA', 'spotify:track:67iAlVNDDdddxqSD2EZhFs', 'spotify:track:3ZXOkRlGr6qmiOb6FI8GwP', 'spotify:track:4Huu65kMNpBongpyBtPTDr', 'spotify:track:50SxWFCvmZCYcpKWPZECES', 'spotify:track:1H5PVxswRh4KpLoW5o78VJ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "songs_for_playlist = []\n",
+    "for keyword in word_counter.keys():\n",
+    "    # only take the 'top' words\n",
+    "    if word_counter[keyword] >= 2:\n",
+    "        # search for artists based on my keyword, only give me one artist\n",
+    "        searchResults = sp.search(q=\"artist:\" + keyword, type=\"track\", limit=1)\n",
+    "        # if the search returns anything\n",
+    "        if len(searchResults['tracks']['items']) > 0:\n",
+    "            songs_for_playlist.append(searchResults['tracks']['items'][0]['uri'])\n",
+    "    \n",
+    "print(songs_for_playlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "303ec851-ca9f-458b-a016-68cbd6c67ff5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'snapshot_id': 'AAAAAl9ur0O1pLa831xpg0uAP10H9bVf'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_playlist = sp.user_playlist_create(user=username, name=\"Todays News\", public=True,\n",
+    "                                      description=\"Songs for the news\")\n",
+    "results = sp.user_playlist_add_tracks(username, my_playlist['id'], songs_for_playlist)\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "94a5db9d-e641-4b3d-bc2f-10133cad4384",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "webbrowser.open(my_playlist['external_urls']['spotify'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa2fb352-c473-4e9f-9cd0-f0feeeef5563",
    "metadata": {},
    "outputs": [],
    "source": []
